# Finm32500_AlpacaTradingProject

./: .env.example  .gitignore  ADAPTIVE_TRADER_GUIDE.md  COMPLETE_STRATEGY_OVERHAUL_SUMMARY.md  CRYPTO_ADAPTIVE_SUMMARY.md  LOGGING_SETUP.md  README.md  SETUP_CREDENTIALS.md  STRATEGY_FIXES_SUMMARY.md  STRATEGY_REVIEW.md  TODO.md  complexity_report.md  data_generator.py  data_loader.py  main.py  models.py  profiler.py  profiling_benchmarks.ipynb  pyproject.toml  requirements.txt  strategies.py
.claude/: README.md
.claude/commands/: create-labels.md  issue-stats.md  sync-todo-issues.md  todo-to-issues.md
.claude/scripts/: add_labels.py  create_issues.py  (+5 more)
configs/: README.md  bonds_multi_trader.json  commodities_multi_trader.json  crypto_adaptive_multi_trader.json  crypto_multi_trader.json  diversified_multi_trader.json  faang_multi_trader.json  global_multi_trader.json  macro_multi_trader.json  meme_multi_trader.json  multi_trader_example.json  multi_trader_simple.json  sector_multi_trader.json  spy_multi_trader.json  strategy_configs.py
crypto_data/: ETHUSDT.csv  crypto_data_ingestion.py
data/: data_generator.py  equities_data_ingestion_&_cleaning.py  market_data.csv
docs/: ADAPTIVE_PORTFOLIO_GUIDE.md  ARCHITECTURE.md  CLAUDE.md  CRYPTO_ADAPTIVE_GUIDE.md  INTEGRATION_AND_TESTS_COMPLETE.md  LOGGING_IMPROVEMENTS_SUMMARY.md  LOG_LEVELS_GUIDE.md  MULTI_TRADER_GUIDE.md  NEW_STRATEGIES_SUMMARY.md  SAFETY_FEATURES_ADDED.md  SETUP_CREDENTIALS.md  STRATEGY_LOGGING_GUIDE.md  TODO.md
equities_data/: equities_data_ingestion_&_cleaning.py
examples/: backtest_example.py  live_trading_example.py  live_trading_example_crypto.py  live_trading_with_safety.py  risk_management_example.py  safety_features_example.py
notebooks/: initial_research.ipynb
scripts/: adaptive_sector_trader.py  check_connections.sh  run_parallel.py  run_strategy.py  run_tests.py
src/: data_loader.py  models.py  strategies.py
tests/: README.md  __init__.py  conftest.py  test_alpaca_connection.py  test_integration.py  test_performance.py  test_portfolio.py  test_profiling.py  test_safety_features.py  test_strategy_correctness.py
(+98 files in other folders)
